--- a/src/components/form/InputForm.scss
+++ b/src/components/form/InputForm.scss
@@ -1,4 +1,43 @@
 .input-form-cover{
-    border: 1px solid #003cff;
-    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    position: absolute;
+    z-index: 2000;
+    left: 223px;
+    top: 50px;
+    background-color: #ffffff;
+    max-width: 1200px !important;
+    .header{
+        background-color: #343a40;
+        color: #ffffff;
+        .header-title{
+            display: inline-block;
+            font-size: 22px;
+            font-weight: bold;
+        }
+        button{
+            float: right;
+        }
+    }
+    .body{
+        display: flex;
+        justify-content: center;
+        .left-content, .right-content{
+            padding: 15px;
+        }
+    }
+    .footer{
+        border-top: 1px solid #cccccc;
+        text-align: right;
+    }
+}
+
+.backdrop{
+    position: fixed;
+    background-color: #adadad7a;
+    top:0;
+    left: 0;
+    z-index: 1000;
+    width: 4000px;
+    height: 4000px;
 }
