--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap.scss';
+.cover{
+    margin-top: 30px;
+    max-height: 1000px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border: 1px solid #cccccc;
+    padding: 30px;
+    box-sizing: border-box;
+    .page-title{
+        margin-bottom: 40px;
+    }
+}
