add counter characters

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -10,3 +10,9 @@
 .msg-error, .require-star{
     color: red;
 }
+.show-counter-chars{
+    font-size: 10px;
+    position: relative;
+    top: -16px;
+    left: -12px;
+}
