--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -23,6 +23,7 @@
     }
 }
 .paging{
+    float: right;
     .focus{
         background-color: #cccccc;
     }
@@ -33,6 +34,7 @@
         border-radius: 2px;
         text-align: center;
         padding: 3px;
+        margin-right:1px;
         box-sizing: border-box;
         cursor: pointer;
         &:hover{
