--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -1,44 +1,104 @@
-.table-list{
-    td{
-        border-bottom: 1px solid black;
-        padding: 2px 5px;
-    }
-    thead{
-        background-color: #3261fab9;
-        font-weight: bold;
-        color: #ffffff;
+@import '../../assets/scss/common.scss';
+
+.table-list-cover{
+    @include contentPadding($paddingContentTB, $paddingContentLR);
+    position: relative;
+    .table-list{
+        position: relative;
+        left: auto;
+        width: 100%;
+        border-top: 1px solid $borderColor;
+        border-left: 1px solid $borderColor;
+        border-right: 1px solid $borderColor;
+        font-size: 14px;
         td{
-            border-top: 1px solid black;
-            border-bottom: 2px solid black;
+            border-bottom: 1px solid $borderColor;
+            @include tdthPaddingContent();
         }
-    }
-    tbody{
-        tr{
-            &:nth-last-child(){
-                td{
-                    border-bottom: 2px solid black;
+        thead{
+            background-color: $backgroundColor;
+            font-weight: bold;
+            color: #ffffff;
+            th{
+                border-bottom: 2px solid $borderColor;
+                padding:5px;
+                text-align: center;
+                @include tdthPaddingContent();
+                .th-content{
+                    line-height: 15px;
+                    display: flex;
+                    justify-content: center;
+                }
+                .sort-icon-cover{
+                    padding-left: 5px;
+                    line-height: 13px;
+                    font-size: 12px;
+                    .up, .down{
+                        &:hover{
+                            cursor: pointer;
+                            color: $hoverColor;
+                        }
+                    }
+                }
+            }
+            .th-content-truck-palte{
+                width: 100px;
+            }
+            .th-content-th-content-driver{
+                width: 140px;
+            }
+            .th-content-dimention{
+                width: 80px;
+            }
+        }
+        tbody{
+            tr{
+                &:hover{
+                    background-color: $backgroundColorHover;
+                }
+                td{  
+                    .edit-truck-button,
+                    .delete-truck-button{
+                        &:hover{
+                            color: $hoverColor;
+                            border-radius: 2px;
+                            cursor: pointer;
+                        }
+                    }
+                    .edit-truck-button{
+                        color: $editButtonColor;
+                    }
+                    .delete-truck-button{
+                        color: $deleteButtonColor;
+                    }
                 }
             }
         }
     }
-}
-.paging{
-    float: right;
-    .focus{
-        background-color: #cccccc;
-    }
-    .page-item{
-        display: inline-block;
-        min-width: 30px;
-        border: 1px solid #cccccc;
-        border-radius: 2px;
-        text-align: center;
-        padding: 3px;
-        margin-right:1px;
-        box-sizing: border-box;
-        cursor: pointer;
-        &:hover{
-            background-color: #dbdbdb;
+    .paging{
+        float: right;
+        @include contentPadding($paddingContentTB, $paddingContentLR);
+        .page-item{
+            display: inline-block;
+            min-width: 30px;
+            &:not(.focus){
+                background-color: $pagingBackgroundColor;
+            }
+            border-radius: 2px;
+            color: $textColorGrayDark;
+            text-align: center;
+            padding: 3px;
+            margin-right:1px;
+            box-sizing: border-box;
+            cursor: pointer;
+            &:hover{
+                background-color: $backgroundColorHover;
+            }
+        }
+        .focus{
+            background-color: $backgroundColor;
+            color: $textButtonColor;
+            font-weight: bold;
         }
     }
 }
